--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
     <title>
-        <h1 style= "color:aliceblue;">This my website uwu</h1>
+        My Website uwu
     </title>
 </head>
 <body>
-    <h3>Github Link: </h3>
+    <h3 style= "color:aliceblue;">>Github Link: </h3>
 </body>
